[package]
name = "kiibohd-keyscanning"
version = "0.1.0"
authors = ["Zion Koyl <hiszd1@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsam4-hal      = { version = "0.1.13"}
rtcc            = { version = "^0.1.0" }
keyberon        = { version = "^0.1.0" }
cortex-m        = "0.6"
cortex-m-rt     = { version = "0.6.6", features = ["device"] }
panic-halt      = "0.2"
cortex-m-rtic   = "0.5"
generic-array   = "0.13"
embedded-hal    = "0.2"
atsam4e16e-pac  = "0.1.8"
embedded-time   = "0.11.0"