[package]
name = "kiibohd-keyscanning"
version = "0.1.0"
authors = ["Zion Koyl <hiszd1@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtcc            = { version = "^0.1.0" }
cortex-m        = "0.6"
cortex-m-rt     = { version = "0.6.6", features = ["device"] }
cortex-m-rtic   = "0.6.0-alpha.2"
generic-array   = "0.14.4"
embedded-hal    = "0.2.5"
embedded-time   = "0.10.1"
keyberon        = "0.1.1"
heapless        = "0.5"

[dependencies.atsam4-hal]
git = "https:github.com/atsam-rs/atsam4-hal.git"
#path = "../../atsam4-hal"
version = "~0.1.14"
default-features = false
features = ["atsam4s8b"]